test/expected/ntu-error.out
cdecl> typedef char int_least32_t
               ^
3,9: error: "int_least32_t" is a predefined type starting in C99
cdecl> typedef extern int SI
               ^
4,9: error: "typedef extern int" is illegal for built-in type
cdecl> typedef int Int : 3
               ^
5,9: error: "typedef" can not have bit-field widths
cdecl> typedef register int SI
               ^
6,9: error: "typedef register int" is illegal for built-in type
cdecl> typedef static int SI
               ^
7,9: error: "typedef static int" is illegal for built-in type
cdecl> typedef typename int Int
               ^
8,9: syntax error: "typename": unexpected token; "typename" not a keyword until C++98
cdecl> 
cdecl> struct S { typedef int I; }
                  ^
10,12: error: nested types not supported in C
cdecl> 
cdecl> typedef void Void
cdecl> explain Void x
               ^
13,9: error: variable of "void"; did you mean "void*"?
cdecl> 
cdecl> using I = int
       ^
15,1: syntax error: "using": unexpected token; "using" not a keyword until C++98
cdecl> 
cdecl> set c17
cdecl> typedef auto int SI
               ^
18,9: error: "typedef auto int" is illegal for built-in type
cdecl> 
cdecl> set c++
c++decl> typedef auto F()
                 ^
21,9: error: "auto" illegal in type definition
c++decl> typedef int F( auto )
                        ^
22,16: error: "auto" illegal in type definition
c++decl> typedef int F( C auto )
                        ^
23,16: error: "concept" illegal in type definition
c++decl> 
c++decl> class C { namespace N { class D; } }
                             ^
25,21: error: namespace can not nest inside class
c++decl> inline namespace A::B { typedef int Int; }
                          ^
26,18: error: nested namespace can not be inline
c++decl> struct S { namespace N { typedef int Int; } }
                              ^
27,22: error: namespace can not nest inside struct
c++decl> struct S { struct S { typedef int Int; }; };
                           ^
28,19: error: "S": member has the same name as its enclosing struct
c++decl> typedef auto *A
                 ^
29,9: error: "auto" illegal in type definition
c++decl> typedef auto A
                 ^
30,9: error: "auto" illegal in type definition
c++decl> typedef int S::Int
                     ^
31,13: error: typedef names can not be scoped; use: namespace S { typedef ... }
c++decl> 
c++decl> namespace N { class C; }
c++decl> define D of namespace C of namespace N as class D
                  ^
34,10: error: "C" was previously declared as "class" ("namespace N { class C; }")
c++decl> 
c++decl> enum E
c++decl> namespace E { class C; }
                   ^
37,11: error: "E" was previously declared as "enum" ("enum E")
c++decl> 
c++decl> namespace N { class C; }
c++decl> namespace N::C { class D; }
                   ^
40,11: error: "C" was previously declared as "class" ("namespace N { class C; }")
c++decl> 
c++decl> using AI = auto int
                    ^
42,12: error: "auto" illegal in type definition
c++decl> using int_least32_t = char
                               ^
43,23: error: "int_least32_t" is a predefined type starting in C99
c++decl> using SI = extern int
                    ^
44,12: error: "typedef extern int" is illegal for built-in type
c++decl> using U = void (*F)(int)
                        ^
45,16: error: "using" type can not have a name
c++decl> using SI = register int
                    ^
46,12: error: "typedef register int" is illegal for built-in type since C++17
c++decl> using SI = static int
                    ^
47,12: error: "typedef static int" is illegal for built-in type
c++decl> 
c++decl> set c++14
c++decl> namespace A::B { typedef int Int; }
                   ^
50,11: error: nested namespace declarations not supported until C++17
